--- a/book-network-ui/package.json
+++ b/book-network-ui/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "@stomp/stompjs": "^7.0.0",
     "angular-code-input": "^2.0.0",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
@@ -31,9 +32,9 @@
     "ng-openapi-gen": "^0.51.0",
     "ngx-toastr": "^19.0.0",
     "quill": "^2.0.2",
+    "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
-    "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -42,8 +43,8 @@
     "@angular/cli": "~16.1.4",
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
-    "@types/sockjs-client":"^1.5.4",
-    "@types/stompjs":"^2.3.9",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.9",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
